examples/my-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: parking
spec:
  parentRefs:
  - name: my-hotel
    sectionName: http
  rules:
  - backendRefs:
    - name: service-1
      kind: ServiceImport
    matches:
    - path:
        type: PathPrefix
        value: /service-1
  - backendRefs:
    - name: service-2
      kind: ServiceImport
    matches:
    - path:
        type: PathPrefix
        value: /service-2
